--- a/src/App.css
+++ b/src/App.css
@@ -48,33 +48,22 @@ img{
 }
 
 
-
-
-
-
-
-
-
-
-* {
-  box-sizing: border-box;
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
   margin: 0;
-  padding: 0;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-tap-highlight-color: transparent;
 }
 
-html {
-  font-size: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, 'avenir next', avenir,
-    'helvetica neue', helvetica, ubuntu, roboto, noto, 'segoe ui', arial,
-    sans-serif;
-  margin: 0;
-  padding: 0;
-  text-decoration-skip-ink: 'auto';
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
+
+
+
+
+
 
 :root {
   --gray-900: #111114;
@@ -117,61 +106,11 @@ body {
   }
 }
 
+
+
 /* Typography
 ––––––––––––––––––––––––––––––––– */
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin-bottom: 1rem;
-  margin-top: 1em;
-  font-weight: bold;
-}
-
-h1 {
-  font-size: 3.052rem;
-  letter-spacing: -0.04em;
-  line-height: 1;
-}
-
-h2 {
-  font-size: 2.441rem;
-  letter-spacing: -0.04em;
-  line-height: 1.2;
-}
-
-h3 {
-  font-size: 1.953rem;
-  letter-spacing: -0.03em;
-  line-height: 1.2;
-}
-
-h4 {
-  font-size: 1.563rem;
-  line-height: 1.3;
-}
-
-h5 {
-  font-size: 1.25rem;
-  line-height: 1.4;
-}
-
-h6 {
-  font-size: 1rem;
-  letter-spacing: 0;
-  line-height: 1.5;
-}
-
-p {
-  margin-bottom: 1.563rem;
-}
-
-p > *:last-child {
-  margin-bottom: 0;
-}
 
 a {
   color: inherit;
@@ -226,9 +165,8 @@ label {
 input[type='email'],
 input[type='text'],
 input[type='number'] {
-  padding: 0.65rem 0.5rem;
+  padding: 0.1rem 0.5rem;
   font-size: 1rem;
-  border: 2px solid var(--gray-200);
   background-color: var(--gray-100);
   color: var(--gray-800);
   border-radius: var(--border-radius);
@@ -247,21 +185,21 @@ input[type='number'] {
   }
 }
 
-input[type='email']:hover,
+/* input[type='email']:hover,
 input[type='text']:hover,
 input[type='number']:hover,
 textarea:hover {
   border: 2px solid var(--gray-300);
-}
+} */
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   input[type='email']:hover,
   input[type='text']:hover,
   input[type='number']:hover,
   textarea:hover {
     border: 2px solid var(--gray-600);
   }
-}
+} */
 
 select {
   -webkit-appearance: none;
@@ -327,7 +265,6 @@ input:hover:focus,
 select:hover:focus,
 textarea:hover:focus {
   outline: none;
-  border: 2px solid var(--focus-ring-color);
 }
 
 input:invalid,
@@ -336,6 +273,7 @@ textarea:invalid {
   border: 2px solid #ff7d87;
   box-shadow: none;
 }
+
 
 input[type='checkbox'] {
   display: inline-block;
